// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consent renders with deprecated prop accountId 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
    type="SourcePoint"
  >
    <script
      type="application/json"
    >
      {"postPromptUI":"privacy-settings-prompt","clientConfig":{"accountId":"test-accountid","siteName":"test-sitename"}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        on="tap:consent.prompt(consent=SourcePoint)"
        type="submit"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders with optional prop privacyManagerId 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
    type="SourcePoint"
  >
    <script
      type="application/json"
    >
      {"postPromptUI":"privacy-settings-prompt","clientConfig":{"accountId":"test-accountid","siteName":"test-sitename","privacyManagerId":"test-privacymanagerid"}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        on="tap:consent.prompt(consent=SourcePoint)"
        type="submit"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders with optional prop settingsButtonText 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
    type="SourcePoint"
  >
    <script
      type="application/json"
    >
      {"postPromptUI":"privacy-settings-prompt","clientConfig":{"accountId":"test-accountid","siteName":"test-sitename","privacyManagerId":"test-privacymanagerid"}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        on="tap:consent.prompt(consent=SourcePoint)"
        type="submit"
      >
        Privacy Manager
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders with optional prop siteId 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
    type="SourcePoint"
  >
    <script
      type="application/json"
    >
      {"postPromptUI":"privacy-settings-prompt","clientConfig":{"accountId":"test-accountid","siteName":"test-sitename","siteId":"test-siteId"}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        on="tap:consent.prompt(consent=SourcePoint)"
        type="submit"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders with optional prop targetingParams 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
    type="SourcePoint"
  >
    <script
      type="application/json"
    >
      {"postPromptUI":"privacy-settings-prompt","clientConfig":{"accountId":"test-accountid","siteName":"test-sitename","targetingParams":{"foo":"bar"}}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        on="tap:consent.prompt(consent=SourcePoint)"
        type="submit"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders with postPromptUI 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
    type="SourcePoint"
  >
    <script
      type="application/json"
    >
      {"postPromptUI":"postPrompt","clientConfig":{"accountId":"test-accountid","siteName":"test-sitename"}}
    </script>
    <div
      id="postPrompt"
    >
      <button
        on="tap:consent.prompt(consent=SourcePoint)"
        type="submit"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders without postPromptUI 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
    type="SourcePoint"
  >
    <script
      type="application/json"
    >
      {"postPromptUI":"privacy-settings-prompt","clientConfig":{"accountId":"test-accountid","siteName":"test-sitename"}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        on="tap:consent.prompt(consent=SourcePoint)"
        type="submit"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;
